--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "jade": "^1.11.0",
+    "mongoose": "^4.4.4",
     "morgan": "^1.7.0",
     "stylus": "^0.53.0"
   },
   "devDependencies": {
     "bower": "^1.7.7",
-    "eslint": "^2.2.0"
+    "eslint": "^2.2.0",
+    "eslint-config-airbnb": "^5.0.1",
+    "eslint-plugin-react": "^4.0.0"
   }
 }
